@@ -1,4 +1,4 @@
 Acknowledgements: libfdatetime
 
-Copyright (c) 2009-2012, Joachim Metz <jbmetz@users.sourceforge.net>
+Copyright (c) 2009-2012, Joachim Metz <joachim.metz@gmail.com>
 
