@@ -158,12 +158,12 @@ None
 None
 .Sh NOTES
 .Sh BUGS
-Please report bugs of any kind to <jbmetz@users.sourceforge.net> or on the project website:
+Please report bugs of any kind to <joachim.metz@gmail.com> or on the project website:
 http://libfdata.sourceforge.net/
 .Sh AUTHOR
 These man pages were written by Joachim Metz.
 .Sh COPYRIGHT
-Copyright (c) 2009-2012, Joachim Metz <jbmetz@users.sourceforge.net>.
+Copyright (c) 2009-2012, Joachim Metz <joachim.metz@gmail.com>.
 This is free software; see the source for copying conditions. There is NO warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 .Sh SEE ALSO
 the libfdatetime.h include file
