@@ -28,6 +28,9 @@ HFS date/time
 Deployment
 * add macosx file
 
+20120522
+* worked on floatingtime
+
 20120521
 * added floatingtime
 
